--- a/app/src/main/res/layout/adapter_news.xml
+++ b/app/src/main/res/layout/adapter_news.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivAlbumLogo"
+            android:id="@+id/ivSourceImage"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:contentDescription="@string/app_name"
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvArtistName"
+            android:id="@+id/tvTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -37,11 +37,11 @@
             android:textColor="@android:color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivAlbumLogo"
-            app:layout_constraintTop_toTopOf="@+id/ivAlbumLogo" />
+            app:layout_constraintStart_toEndOf="@+id/ivSourceImage"
+            app:layout_constraintTop_toTopOf="@+id/ivSourceImage" />
 
         <TextView
-            android:id="@+id/tvTrackName"
+            android:id="@+id/tvSource"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -52,11 +52,11 @@
             android:textColor="@android:color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivAlbumLogo"
-            app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />
+            app:layout_constraintStart_toEndOf="@+id/ivSourceImage"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
         <TextView
-            android:id="@+id/tvDescription"
+            android:id="@+id/tvContent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -67,8 +67,8 @@
             android:textColor="@android:color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivAlbumLogo"
-            app:layout_constraintTop_toBottomOf="@+id/tvTrackName" />
+            app:layout_constraintStart_toEndOf="@+id/ivSourceImage"
+            app:layout_constraintTop_toBottomOf="@+id/tvSource" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
